Main menu WIP and tuning

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.juse.minigods"
         minSdkVersion 24
         targetSdkVersion 28
-        versionCode 2
-        versionName "0.2 Alpha"
+        versionCode 4
+        versionName "0.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         externalNativeBuild {
@@ -49,13 +49,16 @@ project.ext.jomlVersion = "1.9.3-SNAPSHOT"
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    // DONT CHANGE THEM TO 28.0.0 IT FUCKS EVERYTHING
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
     //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:27.1.1'
     implementation "org.joml:joml-android:${jomlVersion}"
     implementation 'com.flowpowered:flow-noise:1.0.1-SNAPSHOT'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
 }
