--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,48 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.juse.minigods">
 
+    <uses-feature
+        android:glEsVersion="0x00030001"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
+        android:hasCode="true"
         android:icon="@mipmap/ic_app"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_app_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:hasCode="true"
         tools:ignore="HardcodedDebugMode">
 
-        <!--
-        -->
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="landscape"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
+            android:screenOrientation="landscape"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        </activity>
 
+        <activity android:name=".MenuActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!--
-        <activity android:name="android.app.NativeActivity"
-                  android:label="@string/app_name"
-                  android:configChanges="orientation|keyboardHidden">
-
-            <meta-data android:name="android.app.lib_name"
-                android:value="game_engine" />
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> -->
-
     </application>
 
-    <uses-feature android:glEsVersion="0x00030001" android:required="true" />
 </manifest>
