--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.juse.minigods">
 
     <uses-feature
-        android:glEsVersion="0x00030001"
+        android:glEsVersion="0x00030000"
         android:required="true" />
 
     <application
@@ -37,8 +37,18 @@
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
         <meta-data
-            android:name="com.google.android.gms.ads.pub-3628038149266927"
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3628038149266927~1310935955" />
+
+        <meta-data
+            android:name="firebase_crashlytics_collection_enabled"
+            android:value="false" />
+        <meta-data
+            android:name="firebase_messaging_auto_init_enabled"
+            android:value="false" />
+        <meta-data
+            android:name="firebase_analytics_collection_enabled"
+            android:value="false" />
 
         <activity android:name=".AboutActivity" />
     </application>
